--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -1,28 +1,13 @@
 <nav class="navbar">
-  <ul>
+  <ul class="flex-row">
     <li>
-      <a
-        routerLink="home"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Home</a
-      >
+      <a routerLink="home" routerLinkActive="active" ariaCurrentWhenActive="page" class="link pill">Home</a>
     </li>
     <li>
-      <a
-        routerLink="career"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Karriere</a
-      >
+      <a routerLink="career" routerLinkActive="active" ariaCurrentWhenActive="page" class="link pill">Karriere</a>
     </li>
     <li>
-      <a
-        routerLink="projects"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Projekte</a
-      >
+      <a routerLink="projects" routerLinkActive="active" ariaCurrentWhenActive="page" class="link pill">Projekte</a>
     </li>
   </ul>
 </nav>
