--- a/src/app/components/general/filter/filter.component.html
+++ b/src/app/components/general/filter/filter.component.html
@@ -2,12 +2,12 @@
   <div class="filterSelected">
     <ng-container *ngFor="let category of selectedFilter">
       <ng-container *ngIf="category.range">
-        <div *ngIf="!isDefaultRangeValue(category)" class="selectedItem" (click)="resetRange(category)">
+        <div *ngIf="!isDefaultRangeValue(category)" class="selectedItem pill" (click)="resetRange(category)">
           <p>{{ category.name }}: {{ category.value[0] }} - {{ category.value[1] }}<b> X</b></p>
         </div>
       </ng-container>
       <ng-container *ngIf="!category.range">
-        <div *ngFor="let item of category.value" class="selectedItem"
+        <div *ngFor="let item of category.value" class="selectedItem pill"
           (click)="toggleTag(category.id, category.name, item)">
           <p>{{ getName(category.id, item) }}<b> X</b></p>
         </div>
@@ -15,30 +15,30 @@
     </ng-container>
   </div>
 </div>
-<div #comp class="filterComp">
-  <div class="filterTitle">
-    <div class="showFilter" (mouseenter)="comp.classList.add('hover')" (mouseleave)="comp.classList.remove('hover')"
-      (click)="
-        content.classList.toggle('active'); img.classList.toggle('active')
+<div #comp class="filterComp slimpill">
+  <div class="filterTitle flex-e2e">
+    <div class="showFilter flex-row-nojust" (mouseenter)="comp.classList.add('hover')"
+      (mouseleave)="comp.classList.remove('hover')" (click)="
+        content.classList.toggle('flex-row-nojust'); img.classList.toggle('active'); items.classList.toggle('active')
       ">
-      <img #img class="arrowImg" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}" loading="lazy" />
+      <img #img class="arrowImg small-image" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}" loading="lazy" />
       <h3>{{ filterName }}</h3>
     </div>
-    <p (click)="reset()" class="filterReset">Zurücksetzen</p>
+    <p (click)="reset()" class="filterReset link pill">Zurücksetzen</p>
   </div>
-  <div #content class="filterItems">
-    <div class="filterCategories">
+  <div #items class="filterItems">
+    <div #content class="filterCategories">
       <div #cat *ngFor="let category of filters.categories">
-        <div class="showFilter filterCategory" (click)="
-            cat.classList.toggle('active'); imgF.classList.toggle('active')
+        <div class="showFilter filterCategory flex-row-nojust" (click)="
+            cat.classList.toggle('active'); imgF.classList.toggle('active'); tags.classList.toggle('flex-list')
           ">
-          <img #imgF class="arrowImg" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}" loading="lazy" />
+          <img #imgF class="arrowImg small-image" src="{{ arrowIcon.path }}" alt="{{ arrowIcon.alt }}" loading="lazy" />
           <h5 class="categoryTitle">{{ category.name }}</h5>
         </div>
-        <div class="tags">
+        <div #tags class="tags">
           <div *ngFor="let tag of category.tags" (click)="toggleTag(category.id, category.name, tag.value);" class="tag"
             [id]="tag.id">
-            <img *ngIf="tag.image" src="{{ tag.image.path }}" alt="{{ tag.image.alt }}" class="tagIcon"
+            <img *ngIf="tag.image" src="{{ tag.image.path }}" alt="{{ tag.image.alt }}" class="tagIcon small-image"
               loading="lazy" />
             <p>{{ tag.name }}</p>
           </div>
@@ -47,28 +47,7 @@
     </div>
 
     <div #ran *ngFor="let range of filters.ranges" class="filterRange">
-      <img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
-      <h5 class="categoryTitle">{{ range.name }}</h5>
-      <div class="range" style="--a: {{ r1.value }}; --b: {{ r2.value }}; --min: {{
-          range.values[0]
-        }}; --max: {{ range.values[range.values.length - 1] }}">
-        <output #o1 class="rangeFrom" for="{{ range.id }}_1" id="{{ range.id }}_1_out">{{
-          r1.value > r2.value ? r1.value : r2.value
-          }}</output>
-        <div class="wrap">
-          <label class="sr-only" for="{{ range.id }}_1">Value A:</label>
-          <input type="range" [min]="range.values[0]" [max]="range.values[range.values.length - 1]" [step]="range.step"
-            [value]="range.values[0]" (input)="changeRange(range, r1, r2, o1, o2)" class="slider slider1"
-            id="{{ range.id }}_1" #r1 />
-          <label class="sr-only" for="{{ range.id }}_2">Value B:</label>
-          <input type="range" [min]="range.values[0]" [max]="range.values[range.values.length - 1]" [step]="range.step"
-            [value]="range.values[range.values.length - 1]" (input)="changeRange(range, r1, r2, o1, o2)"
-            class="slider slider2" id="{{ range.id }}_2" #r2 />
-        </div>
-        <output #o2 class="rangeTo" for="{{ range.id }}_2" id="{{ range.id }}_2_out">{{
-          r2.value
-          }}</output>
-      </div>
+      <app-range [range]="range" (rangeEmitter)="updateRange($event)"></app-range>
     </div>
   </div>
 </div>
