--- a/src/app/components/general/skills/skill-item/skill-item.component.html
+++ b/src/app/components/general/skills/skill-item/skill-item.component.html
@@ -1,8 +1,4 @@
-<app-tooltip
-  [name]="skillText"
-  [icon]="skill.icon"
-  [description]="skill.description"
-  [direction]="direction.TOP"
+<app-tooltip [name]="skillText" [icon]="skill.icon" [description]="skill.description" [direction]="direction.TOP"
   [link]="
     skill.url
       ? {
@@ -12,50 +8,29 @@
           url: skill.url
         }
       : undefined
-  "
->
+  ">
   <p class="cat-title">
     Kategorie{{ skill.skillcategories.length > 1 ? "n" : "" }}
   </p>
   <div *ngFor="let category of skill.skillcategories" class="cat-container">
-    <img
-      class="skill-cat-img"
-      src="{{ category.image.path }}"
-      alt="{{ category.image.alt }}"
-      loading="lazy"
-    />
+    <img class="skill-cat-img small-image" src="{{ category.image.path }}" alt="{{ category.image.alt }}"
+      loading="lazy" />
     <p>{{ category.name }}</p>
   </div>
 </app-tooltip>
-<div
-  [class]="
-    showPercent
-      ? 'percent-' + skill.knowledgepercent + ' skill-item'
-      : 'skill-item'
-  "
->
+<div [class]="
+    (showPercent ? 'percent-' + skill.knowledgepercent: '')+' flex-row-nojust pill skill-item'
+  ">
   <div *ngIf="showPercent" class="skill-cat-img-container">
-    <img
-      class="skill-cat-img"
-      *ngFor="let category of skill.skillcategories"
-      src="{{ category.image.path }}"
-      alt="{{ category.image.alt }}"
-      loading="lazy"
-    />
+    <img class="skill-cat-img small-image" *ngFor="let category of skill.skillcategories"
+      src="{{ category.image.path }}" alt="{{ category.image.alt }}" loading="lazy" />
   </div>
-  <div
-    [class]="
+  <div [class]="
       showPercent
         ? 'skill-title-container margin-left'
         : 'skill-title-container'
-    "
-  >
-    <img
-      class="skill-icon"
-      src="{{ skill.icon.path }}"
-      alt="{{ skill.icon.alt }}"
-      loading="lazy"
-    />
+    ">
+    <img class="skill-icon small-image" src="{{ skill.icon.path }}" alt="{{ skill.icon.alt }}" loading="lazy" />
     <p class="skill-title">{{ skillText }}</p>
   </div>
 </div>
