--- a/src/app/components/general/sort/sort.component.html
+++ b/src/app/components/general/sort/sort.component.html
@@ -1,13 +1,14 @@
-<div class="sortComp">
-    <div class="sortTitle">
-        <img class="arrowImg" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
+<div class="sortComp flex-e2e slimpill">
+    <div class="sortTitle flex-row-nojust">
+        <img class="arrowImg small-image" src="{{arrowIcon.path}}" alt="{{arrowIcon.alt}}" loading="lazy">
         <h3>Sortieren nach</h3>
     </div>
-    <select #sortFields name="sortFields" id="sortFields" [(ngModel)]="selectedValue" (change)="selectItem()">
-        <option *ngFor="let field of fields" [ngValue]="field">{{field.name}}</option>
+    <select #sortFields name="sortFields" class="pill" id="sortFields" [(ngModel)]="selectedValue"
+        (change)="selectItem()">
+        <option *ngFor="let field of fields" [ngValue]="field" class="link">{{field.name}}</option>
     </select>
-    <select #sortAsc name="sortAsc" id="sortAsc" [(ngModel)]="ascending" (change)="selectItem()">
-        <option [ngValue]="false">Absteigend</option>
-        <option [ngValue]="true">Aufsteigend</option>
+    <select #sortAsc name="sortAsc" class="pill" id="sortAsc" [(ngModel)]="ascending" (change)="selectItem()">
+        <option [ngValue]="false" class="link">Absteigend</option>
+        <option [ngValue]="true" class="link">Aufsteigend</option>
     </select>
 </div>
