removed :not for browser compatibility

--- a/src/app/components/general/carousel/carousel.component.html
+++ b/src/app/components/general/carousel/carousel.component.html
@@ -1,5 +1,6 @@
 <div class="carousel">
-  <div *ngFor="let slide of images; index as i" class="slide" [ngClass]="{ 'active flex-center': current === i }">
+  <div *ngFor="let slide of images; index as i" class="slide"
+    [class]="current === i ? 'active flex-center' : 'notactive'">
     <app-image [image]="slide"></app-image>
   </div>
   <div class="arrow left" (click)="showSlide(current - 1)">
@@ -10,5 +11,6 @@
   </div>
 </div>
 <div class="dots flex-row">
-  <div *ngFor="let slide of images; index as i" (click)="showSlide(i)" [ngClass]="{ active: current === i }"></div>
+  <div *ngFor="let slide of images; index as i" (click)="showSlide(i)" [class]="current === i ? 'active' : 'notactive'">
+  </div>
 </div>
