--- a/src/app/components/general/carousel/carousel.component.scss
+++ b/src/app/components/general/carousel/carousel.component.scss
@@ -15,7 +15,7 @@
         height: 100%;
 
         & .slide {
-            &:not(.active) {
+            &.notactive {
                 display: none;
             }
 
