--- a/src/app/components/general/contentbox/contentbox.component.scss
+++ b/src/app/components/general/contentbox/contentbox.component.scss
@@ -22,7 +22,7 @@
         }
     }
 
-    &> :not(.active) {
+    &>.notactive {
         & .preview {
             grid-template-columns: variables.$elem-height 1fr variables.$elem-height;
             grid-template-areas: "image title arrow";
@@ -37,7 +37,10 @@
             }
         }
 
-        &> :not(.preview) {
+        & .mainImg,
+        .desc,
+        .bottom,
+        .belowbottom {
             display: none;
         }
     }
