--- a/src/app/components/general/filter/filter.component.scss
+++ b/src/app/components/general/filter/filter.component.scss
@@ -45,7 +45,7 @@
 
         & .filterItems {
 
-            &:not(.active) {
+            &.notactive {
 
                 & .filterCategories,
                 .filterRange {
@@ -117,7 +117,7 @@
                             }
                         }
 
-                        &:not(.active) {
+                        &.notactive {
                             & .tags {
                                 display: none;
                             }
@@ -132,7 +132,7 @@
             cursor: pointer;
 
             & .arrowImg {
-                &:not(.active) {
+                &.notactive {
                     transform: rotate(180deg);
                 }
             }
